# NN

./: README.md  pyproject.toml
exp/: demo.py  nn_cross_validation.py  torch_demo.py
src/nn/: __init__.py  activation.py  layer.py  loss.py  network.py  optim.py
