[project]
name = "nn"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "nomura", email = "moosan6363@gmail.com" }
]
dependencies = [
    "numpy>=1.26.4",
    "matplotlib>=3.8.4",
    "torch>=2.3.0",
    "scikit-learn>=1.4.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nn"]
